--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+/* base */
+* {
+  margin: 10px;
+  font-family: "Raleway";
+
+  background-color: #69747C;
+  color: #F1F1F1;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* navbar */
+.navbar h1 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 56px;
+
+  color: #D2E4C4;
+}
+
+/* home */
+.home h1 {
+  text-align: center;
+
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 56px;
+}
+
+.home p {
+  text-align: center;
+
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
 }
